test/files/neg/t7895c.scala
class A {
  def booboo = bong + booble + bippity - bazingo
}
